--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -178,9 +178,7 @@
                         </div>
                         <div class="main-menu-three__bottom-right">
                             <div class="main-menu-three__social">
-                                <a href="#"><i class="fab fa-twitter"></i></a>
                                 <a href="#"><i class="fab fa-facebook"></i></a>
-                                <a href="#"><i class="fab fa-pinterest-p"></i></a>
                                 <a href="#"><i class="fab fa-instagram"></i></a>
                             </div>
                         </div>
@@ -217,9 +215,7 @@
 				<!-- /.mobile-nav__contact -->
 				<div class="mobile-nav__top">
 					<div class="mobile-nav__social">
-						<a href="#" class="fab fa-twitter"></a>
 						<a href="#" class="fab fa-facebook-square"></a>
-						<a href="#" class="fab fa-pinterest-p"></a>
 						<a href="#" class="fab fa-instagram"></a>
 					</div>
 					<!-- /.mobile-nav__social -->
@@ -260,7 +256,7 @@
 		<!--Site Footer Start-->
 		<footer class="site-footer">
 			<div class="site-footer-img-1">
-				<img src="/assets/images/resources/site-footer-img-1.png" alt="">
+				<img src="/assets/images/resources/marlier4White.png" style="height= 150px; width: 200px;" alt="">
 			</div>
 			<div class="site-footer-shape-1">
 				<img src="/assets/images/shapes/site-footer-shape-1.png" alt="">
@@ -275,13 +271,7 @@
 								</div>
 								<div class="site-footer__social">
 									<a href="#">
-										<i class="fab fa-twitter"></i>
-									</a>
-									<a href="#">
 										<i class="fab fa-facebook"></i>
-									</a>
-									<a href="#">
-										<i class="fab fa-pinterest-p"></i>
 									</a>
 									<a href="#">
 										<i class="fab fa-instagram"></i>
@@ -291,19 +281,19 @@
 						</div>
 						<div class="col-xl-2 col-lg-6 col-md-6 wow fadeInUp" data-wow-delay="200ms">
 							<div class="footer-widget__column footer-widget__explore clearfix">
-								<h3 class="footer-widget__title">Explore</h3>
+								<h3 class="footer-widget__title">Explorer</h3>
 								<ul class="footer-widget__explore-list list-unstyled clearfix">
 									<li>
-										<a href="contact.html">Contact</a>
+										<a href="/services">Services</a>
 									</li>
 									<li>
-										<a href="work.html">Recent Works</a>
+										<a href="/chantier">Chantiers</a>
 									</li>
 									<li>
-										<a href="team.html">Our Team</a>
+										<a href="/comm">Commentaires</a>
 									</li>
 									<li>
-										<a href="testimonials.html">Testimonials</a>
+										<a href="/">Contact</a>
 									</li>
 								</ul>
 							</div>
