--- a/templates/homepage/index.html.twig
+++ b/templates/homepage/index.html.twig
@@ -52,10 +52,10 @@
 											<p class="main-slider-three__text">Votre expert en 
 												<br>
 												couverture, charpente, étanchéité de toiture plate, isolation et désamiantage</p>
-											<div class="main-slider-three__btn-box" style="display: none">
-												<a href="#" class="thm-btn main-slider-three__btn">
+											<div class="main-slider-three__btn-box">
+												<a href="/services" class="thm-btn main-slider-three__btn">
 													<i class="fa fa-arrow-right"></i>
-													Discover more</a>
+													Découvrez nos services</a>
 											</div>
 										</div>
 									</div>
@@ -64,24 +64,14 @@
 						</div>
 
 						<div class="swiper-slide">
-							<div class="image-layer-three" style="background-image: url(assets/images/backgrounds/carousel2.jpg);"></div>
+							<div class="image-layer-three" style="background-image: url(assets/images/backgrounds/carousel2.jpg);height: 750px;"></div>
 							<!-- /.image-layer -->
 
 							<div class="container">
 								<div class="row">
 									<div class="col-xl-12">
 										<div class="main-slider-three__content">
-											<h2 class="main-slider-three__title">Roof installation
-												<br>
-												services in your city</h2>
-											<p class="main-slider-three__text">We provide a variety of roofing and maintenance services for
-												<br>
-												all type of house makes happy.</p>
-											<div class="main-slider-three__btn-box" style="display: none">
-												<a href="#" class="thm-btn main-slider-three__btn">
-													<i class="fa fa-arrow-right"></i>
-													Discover more</a>
-											</div>
+											
 										</div>
 									</div>
 								</div>
@@ -89,144 +79,84 @@
 						</div>
 
 						<div class="swiper-slide">
-							<div class="image-layer-three" style="background-image: url(assets/images/backgrounds/carousel3.jpg);"></div>
+							<div class="image-layer-three" style="background-image: url(assets/images/backgrounds/carousel3.jpg);height: 750px;"></div>
 							<!-- /.image-layer -->
 
 							<div class="container">
 								<div class="row">
 									<div class="col-xl-12">
 										<div class="main-slider-three__content">
-											<h2 class="main-slider-three__title">Roof installation
-												<br>
-												services in your city</h2>
-											<p class="main-slider-three__text">We provide a variety of roofing and maintenance services for
-												<br>
-												all type of house makes happy.</p>
-											<div class="main-slider-three__btn-box" style="display: none">
-												<a href="#" class="thm-btn main-slider-three__btn">
-													<i class="fa fa-arrow-right"></i>
-													Discover more</a>
-											</div>
+											
 										</div>
 									</div>
 								</div>
 							</div>
 						</div>
 						<div class="swiper-slide">
-							<div class="image-layer-three" style="background-image: url(assets/images/backgrounds/carousel4.jpg); height: 100%;"></div>
+							<div class="image-layer-three" style="background-image: url(assets/images/backgrounds/carousel4.jpg); height: 750px;"></div>
 							<!-- /.image-layer -->
 
 							<div class="container">
 								<div class="row">
 									<div class="col-xl-12">
 										<div class="main-slider-three__content">
-											<h2 class="main-slider-three__title">Roof installation
-												<br>
-												services in your city</h2>
-											<p class="main-slider-three__text">We provide a variety of roofing and maintenance services for
-												<br>
-												all type of house makes happy.</p>
-											<div class="main-slider-three__btn-box" style="display: none">
-												<a href="#" class="thm-btn main-slider-three__btn">
-													<i class="fa fa-arrow-right"></i>
-													Discover more</a>
-											</div>
+											
 										</div>
 									</div>
 								</div>
 							</div>
 						</div>
 						<div class="swiper-slide">
-							<div class="image-layer-three" style="background-image: url(assets/images/backgrounds/carousel5.jpg); height: 100%;"></div>
+							<div class="image-layer-three" style="background-image: url(assets/images/backgrounds/carousel5.jpg); height: 750px;"></div>
 							<!-- /.image-layer -->
 
 							<div class="container">
 								<div class="row">
 									<div class="col-xl-12">
 										<div class="main-slider-three__content">
-											<h2 class="main-slider-three__title">Roof installation
-												<br>
-												services in your city</h2>
-											<p class="main-slider-three__text">We provide a variety of roofing and maintenance services for
-												<br>
-												all type of house makes happy.</p>
-											<div class="main-slider-three__btn-box" style="display: none">
-												<a href="#" class="thm-btn main-slider-three__btn">
-													<i class="fa fa-arrow-right"></i>
-													Discover more</a>
-											</div>
+											
 										</div>
 									</div>
 								</div>
 							</div>
 						</div>
 						<div class="swiper-slide">
-							<div class="image-layer-three" style="background-image: url(assets/images/backgrounds/carousel6-1.jpg); height: 100%;"></div>
+							<div class="image-layer-three" style="background-image: url(assets/images/backgrounds/carousel6-1.jpg);height: 750px;"></div>
 							<!-- /.image-layer -->
 
 							<div class="container">
 								<div class="row">
 									<div class="col-xl-12">
 										<div class="main-slider-three__content">
-											<h2 class="main-slider-three__title">Roof installation
-												<br>
-												services in your city</h2>
-											<p class="main-slider-three__text">We provide a variety of roofing and maintenance services for
-												<br>
-												all type of house makes happy.</p>
-											<div class="main-slider-three__btn-box" style="display: none">
-												<a href="#" class="thm-btn main-slider-three__btn">
-													<i class="fa fa-arrow-right"></i>
-													Discover more</a>
-											</div>
+											
 										</div>
 									</div>
 								</div>
 							</div>
 						</div>
 						<div class="swiper-slide">
-							<div class="image-layer-three" style="background-image: url(assets/images/backgrounds/carousel7.jpg); height: 100%;"></div>
+							<div class="image-layer-three" style="background-image: url(assets/images/backgrounds/carousel7.jpg);height: 750px;"></div>
 							<!-- /.image-layer -->
 
 							<div class="container">
 								<div class="row">
 									<div class="col-xl-12">
 										<div class="main-slider-three__content">
-											<h2 class="main-slider-three__title">Roof installation
-												<br>
-												services in your city</h2>
-											<p class="main-slider-three__text">We provide a variety of roofing and maintenance services for
-												<br>
-												all type of house makes happy.</p>
-											<div class="main-slider-three__btn-box" style="display: none">
-												<a href="#" class="thm-btn main-slider-three__btn">
-													<i class="fa fa-arrow-right"></i>
-													Discover more</a>
-											</div>
+											
 										</div>
 									</div>
 								</div>
 							</div>
 						</div>
 						<div class="swiper-slide">
-							<div class="image-layer-three" style="background-image: url(assets/images/backgrounds/carousel8.jpg); height: 100%;"></div>
+							<div class="image-layer-three" style="background-image: url(assets/images/backgrounds/carousel8.jpg);height: 750px;"></div>
 							<!-- /.image-layer -->
 
 							<div class="container">
 								<div class="row">
 									<div class="col-xl-12">
 										<div class="main-slider-three__content">
-											<h2 class="main-slider-three__title">Roof installation
-												<br>
-												services in your city</h2>
-											<p class="main-slider-three__text">We provide a variety of roofing and maintenance services for
-												<br>
-												all type of house makes happy.</p>
-											<div class="main-slider-three__btn-box" style="display: none">
-												<a href="#" class="thm-btn main-slider-three__btn">
-													<i class="fa fa-arrow-right"></i>
-													Discover more</a>
-											</div>
+											
 										</div>
 									</div>
 								</div>
@@ -265,10 +195,10 @@
 							<div class="about-three__left">
 								<div class="about-three__img-box wow slideInLeft" data-wow-delay="100ms" data-wow-duration="2500ms">
 									<div class="about-three__img">
-										<img src="assets/images/backgrounds/supp1.jpg" alt="">
+										<img src="assets/images/backgrounds/carousel3.jpg" alt="">
 									</div>
 									<div class="about-three__img-two">
-										<img src="assets/images/resources/about-three-img-1.jpg" alt="">
+										<img src="assets/images/backgrounds/supp1.jpg" style="height: 325px; width: 400px;" alt="">
 									</div>
 									<div class="about-three__border"></div>
 								</div>
@@ -363,8 +293,8 @@
 							<div class="appointment__left" style="padding-top: 28px">
 								<div class="appointment-shape-1" style="background-image: url(assets/images/shapes/appointment-shape-1.png);"></div>
 								<div class="appointment__left-content">
-									<h3 class="appointment__title">Book your appointment</h3>
-									<p class="appointment__text">Aliquip ex ea consequat duis aute irure dolor in reprehenderit.</p>
+									<h3 class="appointment__title">Prendre contact</h3>
+									<p class="appointment__text">Nous vous répondrons dans les plus brefs délais</p>
 								</div>
 							</div>
 						</div>
@@ -374,7 +304,7 @@
 									<div class="row">
 										<div class="col-xl-6 col-lg-6 col-md-6">
 											<div class="appointment__input-box">
-												<input type="text" placeholder="Name" name="name">
+												<input type="text" placeholder="Nom" name="name">
 												<div class="appointment__input-icon">
 													<i class="far fa-user"></i>
 												</div>
@@ -382,7 +312,7 @@
 										</div>
 										<div class="col-xl-6 col-lg-6 col-md-6">
 											<div class="appointment__input-box">
-												<input type="text" placeholder="Phone" name="Phone">
+												<input type="text" placeholder="Téléphone" name="Phone">
 												<div class="appointment__input-icon">
 													<i class="fas fa-phone"></i>
 												</div>
@@ -390,7 +320,7 @@
 										</div>
 										<div class="col-xl-6 col-lg-6 col-md-6">
 											<div class="appointment__input-box">
-												<input type="text" placeholder="Address" name="Address">
+												<input type="text" placeholder="Ville" name="Address">
 												<div class="appointment__input-icon">
 													<i class="fas fa-map-marker-alt"></i>
 												</div>
@@ -401,7 +331,7 @@
 										<div class="col-xl-6 col-lg-6 col-md-6">
 											<div class="appointment__input-box">
 												<button type="submit" class="thm-btn appointment__btn">
-													<i class="fa fa-arrow-right"></i>Send a request</button>
+													<i class="fa fa-arrow-right"></i>Envoyer</button>
 											</div>
 										</div>
 									</div>
