--- a/templates/charpente/index.html.twig
+++ b/templates/charpente/index.html.twig
@@ -67,7 +67,7 @@
 								<div class="col-xl-6">
 									<div class="service-details__benefits-single">
 										<div class="service-details__benefits-img">
-											<img src="assets/images/backgrounds/charpente1.jpg" alt="">
+											<img src="assets/images/backgrounds/charpente1.jpg" style="height: 277.5px; width: 370px;" alt="">
 										</div>
 
 									</div>
@@ -75,7 +75,7 @@
 								<div class="col-xl-6">
 									<div class="service-details__benefits-single">
 										<div class="service-details__benefits-img">
-											<img src="assets/images/services/couverture2.jpg" alt="">
+											<img src="assets/images/services/couverture2.jpg" style="height: 277.5px; width: 370px;" alt="">
 										</div>
 
 									</div>
