--- a/templates/services/index.html.twig
+++ b/templates/services/index.html.twig
@@ -20,7 +20,7 @@
 
         <!--Page Header Start-->
         <section class="page-header">
-            <div class="page-header-bg" style="background-image: url(assets/images/backgrounds/page-header-bg.jpg)">
+            <div class="page-header-bg" style="background-image: url(assets/images/services/coverServices.jpg)">
             </div>
             <div class="container">
                 <div class="page-header__inner">
@@ -29,7 +29,7 @@
                         <li><span>/</span></li>
                         <li>Services</li>
                     </ul>
-                    <h2>Our services</h2>
+                    <h2>Nos Services</h2>
                 </div>
             </div>
         </section>
@@ -62,7 +62,7 @@
                     <div class="col-xl-4 col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="200ms">
                         <div class="services-one__single">
                             <div class="services-one__img">
-                                <img src="assets/images/services/couverture3.jpg" alt="">
+                                <img src="assets/images/services/couvertureCover.jpg" style="height:277.5px; width:370px" alt="">
                             </div>
                             <div class="services-one__content">
                                 <div class="services-one__icon">
@@ -71,7 +71,7 @@
                                 <h3 class="services-one__title"><a href="/couverture">Couverture</a></h3>
                                 <p class="services-one__text">Nulla commodo dolor massa, vel pellen esque nulla congue quis.</p>
                                 <div class="services-one__read-more">
-                                    <a href="/couverture">Read More <i class="fa fa-arrow-right"></i></a>
+                                    <a href="/couverture">En savoir plus <i class="fa fa-arrow-right"></i></a>
                                 </div>
                             </div>
                         </div>
@@ -81,7 +81,7 @@
                     <div class="col-xl-4 col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="300ms">
                         <div class="services-one__single">
                             <div class="services-one__img">
-                                <img src="assets/images/backgrounds/panneau2.jpg" alt="">
+                                <img src="assets/images/backgrounds/panneau2.jpg" style="height:277.5px; width:370px" alt="">
                             </div>
                             <div class="services-one__content">
                                 <div class="services-one__icon">
@@ -90,7 +90,7 @@
                                 <h3 class="services-one__title"><a href="/photovoltaique">Panneau Photovoltaïque</a></h3>
                                 <p class="services-one__text">Nulla commodo dolor massa, vel pellen esque nulla congue quis.</p>
                                 <div class="services-one__read-more">
-                                    <a href="/photovoltaique">Read More <i class="fa fa-arrow-right"></i></a>
+                                    <a href="/photovoltaique">En savoir plus <i class="fa fa-arrow-right"></i></a>
                                 </div>
                             </div>
                         </div>
@@ -100,7 +100,7 @@
                     <div class="col-xl-4 col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="400ms">
                         <div class="services-one__single">
                             <div class="services-one__img">
-                                <img src="assets/images/backgrounds/charpente2.jpg" alt="">
+                                <img src="assets/images/backgrounds/charpente2.jpg" style="height:277.5px; width:370px" alt="">
                             </div>
                             <div class="services-one__content">
                                 <div class="services-one__icon">
@@ -109,7 +109,7 @@
                                 <h3 class="services-one__title"><a href="/charpente">Charpente</a></h3>
                                 <p class="services-one__text">Nulla commodo dolor massa, vel pellen esque nulla congue quis.</p>
                                 <div class="services-one__read-more">
-                                    <a href="/charpente">Read More <i class="fa fa-arrow-right"></i></a>
+                                    <a href="/charpente">En savoir plus <i class="fa fa-arrow-right"></i></a>
                                 </div>
                             </div>
                         </div>
@@ -119,7 +119,7 @@
                     <div class="col-xl-4 col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="500ms">
                         <div class="services-one__single">
                             <div class="services-one__img">
-                                <img src="assets/images/services/services-1-5.jpg" alt="">
+                                <img src="assets/images/services/plateCover.jpg" style="height:277.5px; width:370px" alt="">
                             </div>
                             <div class="services-one__content">
                                 <div class="services-one__icon">
@@ -128,14 +128,14 @@
                                 <h3 class="services-one__title"><a href="/toiture">Toiture plate</a></h3>
                                 <p class="services-one__text">Nulla commodo dolor massa, vel pellen esque nulla congue quis.</p>
                                 <div class="services-one__read-more">
-                                    <a href="/toiture">Read More <i class="fa fa-arrow-right"></i></a>
+                                    <a href="/toiture">En savoir plus <i class="fa fa-arrow-right"></i></a>
                                 </div>
                             </div>
                         </div>
                     </div>
                     <!--Services One Single End-->
                     <!--Services One Single Start-->
-                    <div class="col-xl-4 col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="600ms">
+                    {# <div class="col-xl-4 col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="600ms">
                         <div class="services-one__single">
                             <div class="services-one__img">
                                 <img src="assets/images/services/services-1-6.jpg" alt="">
@@ -147,11 +147,11 @@
                                 <h3 class="services-one__title"><a href="metal-roofing.html">Metal roofing</a></h3>
                                 <p class="services-one__text">Nulla commodo dolor massa, vel pellen esque nulla congue quis.</p>
                                 <div class="services-one__read-more">
-                                    <a href="metal-roofing.html">Read More <i class="fa fa-arrow-right"></i></a>
+                                    <a href="metal-roofing.html">En savoir plus <i class="fa fa-arrow-right"></i></a>
                                 </div>
                             </div>
                         </div>
-                    </div>
+                    </div> #}
                     <!--Services One Single End-->
                 </div>
             </div>
