--- a/templates/toiture/index.html.twig
+++ b/templates/toiture/index.html.twig
@@ -43,7 +43,7 @@
 				<div class="col-xl-8 col-lg-7">
 					<div class="service-details__right">
 						<div class="service-details__img">
-							<img src="assets/images/services/couverture3.jpg" alt="">
+							<img src="assets/images/services/plateCover.jpg" alt="">
 							<div class="service-details__icon">
 								<span class="icon-joist"></span>
 							</div>
@@ -64,7 +64,7 @@
 								<div class="col-xl-6">
 									<div class="service-details__benefits-single">
 										<div class="service-details__benefits-img">
-											<img src="assets/images/services/couverture1.jpg" alt="">
+											<img src="assets/images/services/plateLeft.jpg" style="height: 277.5px; width: 370px;" alt="">
 										</div>
 
 									</div>
@@ -72,7 +72,7 @@
 								<div class="col-xl-6">
 									<div class="service-details__benefits-single">
 										<div class="service-details__benefits-img">
-											<img src="assets/images/services/couverture2.jpg" alt="">
+											<img src="assets/images/services/plateRight.jpg" style="height: 277.5px; width: 370px;" alt="">
 										</div>
 
 									</div>
