--- a/templates/admin_photo/index.html.twig
+++ b/templates/admin_photo/index.html.twig
@@ -27,6 +27,7 @@
             <thead>
                 <tr>
                     <th>Id</th>
+                    <th>Titre</th>
                     <th>Description</th>
                     <th>Cover</th>
                     <th>Image Gauche</th>
@@ -38,6 +39,7 @@
                 {% for chantier in chantiers %}
                     <tr>
                         <td>{{ chantier.id }}</td>
+                        <td>{{ chantier.titre }}</td>
                         <td>{{ chantier.desctription }}</td>
                         <td>
                             <img src="{{ asset('uploads/images/' ~ chantier.cover) }}" alt="Image" style="width: 100px; height: auto;">                            
