--- a/templates/services/index.html.twig
+++ b/templates/services/index.html.twig
@@ -69,7 +69,7 @@
                                     <span class="icon-joist"></span>
                                 </div>
                                 <h3 class="services-one__title"><a href="/couverture">Couverture</a></h3>
-                                <p class="services-one__text">Nulla commodo dolor massa, vel pellen esque nulla congue quis.</p>
+                                {# <p class="services-one__text">Nulla commodo dolor massa, vel pellen esque nulla congue quis.</p> #}
                                 <div class="services-one__read-more">
                                     <a href="/couverture">En savoir plus <i class="fa fa-arrow-right"></i></a>
                                 </div>
@@ -88,7 +88,7 @@
                                     <span class="icon-roof-1"></span>
                                 </div>
                                 <h3 class="services-one__title"><a href="/photovoltaique">Panneau Photovoltaïque</a></h3>
-                                <p class="services-one__text">Nulla commodo dolor massa, vel pellen esque nulla congue quis.</p>
+                                {# <p class="services-one__text">Nulla commodo dolor massa, vel pellen esque nulla congue quis.</p> #}
                                 <div class="services-one__read-more">
                                     <a href="/photovoltaique">En savoir plus <i class="fa fa-arrow-right"></i></a>
                                 </div>
@@ -107,7 +107,7 @@
                                     <span class="icon-analysis"></span>
                                 </div>
                                 <h3 class="services-one__title"><a href="/charpente">Charpente</a></h3>
-                                <p class="services-one__text">Nulla commodo dolor massa, vel pellen esque nulla congue quis.</p>
+                                {# <p class="services-one__text">Nulla commodo dolor massa, vel pellen esque nulla congue quis.</p> #}
                                 <div class="services-one__read-more">
                                     <a href="/charpente">En savoir plus <i class="fa fa-arrow-right"></i></a>
                                 </div>
@@ -126,7 +126,7 @@
                                     <span class="icon-support"></span>
                                 </div>
                                 <h3 class="services-one__title"><a href="/toiture">Toiture plate</a></h3>
-                                <p class="services-one__text">Nulla commodo dolor massa, vel pellen esque nulla congue quis.</p>
+                                {# <p class="services-one__text">Nulla commodo dolor massa, vel pellen esque nulla congue quis.</p> #}
                                 <div class="services-one__read-more">
                                     <a href="/toiture">En savoir plus <i class="fa fa-arrow-right"></i></a>
                                 </div>
