--- a/templates/chantier/show.html.twig
+++ b/templates/chantier/show.html.twig
@@ -21,6 +21,29 @@
 					</div>
 				</div>
 			</div>
+			<div class="service-details__benefits">
+            <div class="row">
+                {% if chantier.imageLeft %}
+                    <div class="col-xl-6">
+                        <div class="service-details__benefits-single">
+                            <div class="service-details__benefits-img">
+                                <img src="{{ asset('uploads/images/' ~ chantier.imageLeft) }}" alt="" style="height: 277.5px; width: 370px;">
+                            </div>
+                        </div>
+                    </div>
+                {% endif %}
+
+                {% if chantier.imageRight %}
+                    <div class="col-xl-6">
+                        <div class="service-details__benefits-single">
+                            <div class="service-details__benefits-img">
+                                <img src="{{ asset('uploads/images/' ~ chantier.imageRight) }}" alt="" style="height: 277.5px; width: 370px;">
+                            </div>
+                        </div>
+                    </div>
+                {% endif %}
+            </div>
+        </div>
 		</div>
 	</section>
 
